сохранение расписания в JSON

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,35 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/aaa"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="list unives"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="40dp"
-        android:id="@+id/FUCK"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="150dp"
-        android:id="@+id/first"
-        android:text="text"/>
+        android:text="asdasdasd"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/frgmCont"/>
+<!--    <Button-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/aaa"/>-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="150dp"
-        android:layout_marginLeft="300dp"
-        android:id="@+id/second"
-        android:text="text"/>
+<!--    <Button-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="list unives"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_margin="40dp"-->
+<!--        android:id="@+id/FUCK"/>-->
+
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_margin="150dp"-->
+<!--        android:id="@+id/first"-->
+<!--        android:text="text"/>-->
+
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_marginBottom="150dp"-->
+<!--        android:layout_marginLeft="300dp"-->
+<!--        android:id="@+id/second"-->
+<!--        android:text="text"/>-->
 
 
 </RelativeLayout>
