--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -1,14 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="AAAAAAAAAAAAAAA"
-        android:background="@color/colorAccent"/>
 
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:layout_marginBottom="10dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/start"
+            android:text="xx"
+            android:layout_centerInParent="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="10dp"
+            android:textSize="14dp"
+            android:textColor="@color/primaryText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/random_name"
+            android:layout_centerInParent="true"
+            android:layout_toRightOf="@+id/start"
+            android:text=" - "
+            android:textSize="14dp"
+            android:textColor="@color/primaryText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/end"
+            android:layout_toRightOf="@+id/random_name"
+            android:layout_centerInParent="true"
+            android:text="xx"
+            android:textSize="14dp"
+            android:textColor="@color/primaryText"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/name_of_par"
+            android:layout_toRightOf="@+id/end"
+            android:layout_toLeftOf="@+id/auditoria"
+            android:layout_marginLeft="10dp"
+            android:text="лек. Рандомное пароведение по физической культуре"
+            android:textSize="16dp"
+            android:textColor="@color/primaryText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/docent"
+            android:layout_below="@+id/name_of_par"
+            android:layout_alignLeft="@+id/name_of_par"
+            android:text="доц.каф. Студентовед"
+            android:textSize="14dp"
+            android:textColor="@color/secondaryText"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/auditoria"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_centerInParent="true"
+            android:text="400R"
+            android:textSize="16dp"
+            android:textColor="@color/primaryText"/>
+
+    </RelativeLayout>
+
+
+
+</RelativeLayout>
