--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -1,83 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     >
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:layout_marginBottom="10dp">
-        <TextView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/start"
-            android:text="xx"
-            android:layout_centerInParent="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dp"
-            android:textSize="14dp"
-            android:textColor="@color/primaryText"/>
+            android:background="?attr/colorPrimary"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/bg_par">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/start"
+                android:text="xx"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="10dp"
+                android:textSize="14dp"
+                android:textColor="?android:attr/textColorPrimary"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/random_name"
-            android:layout_centerInParent="true"
-            android:layout_toRightOf="@+id/start"
-            android:text=" - "
-            android:textSize="14dp"
-            android:textColor="@color/primaryText"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/random_name"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/start"
+                android:text=" - "
+                android:textSize="14dp"
+                android:textColor="?android:attr/textColorPrimary"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/end"
-            android:layout_toRightOf="@+id/random_name"
-            android:layout_centerInParent="true"
-            android:text="xx"
-            android:textSize="14dp"
-            android:textColor="@color/primaryText"/>
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/name_of_par"
-            android:layout_toRightOf="@+id/end"
-            android:layout_toLeftOf="@+id/auditoria"
-            android:layout_marginLeft="10dp"
-            android:text="лек. Рандомное пароведение по физической культуре"
-            android:textSize="16dp"
-            android:textColor="@color/primaryText"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/docent"
-            android:layout_below="@+id/name_of_par"
-            android:layout_alignLeft="@+id/name_of_par"
-            android:text="доц.каф. Студентовед"
-            android:textSize="14dp"
-            android:textColor="@color/secondaryText"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/end"
+                android:layout_toRightOf="@+id/random_name"
+                android:layout_centerInParent="true"
+                android:text="xx"
+                android:textSize="14dp"
+                android:textColor="?android:attr/textColorPrimary"/>
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/auditoria"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_centerInParent="true"
-            android:text="400R"
-            android:textSize="16dp"
-            android:textColor="@color/primaryText"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/name_of_par"
+                android:layout_toRightOf="@+id/end"
+                android:layout_toLeftOf="@+id/auditoria"
+                android:layout_marginLeft="10dp"
+                android:text="лек. Рандомное пароведение по физической культуре"
+                android:textSize="16dp"
+                android:textColor="?android:attr/textColorPrimary"/>
 
-    </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/docent"
+                android:layout_below="@+id/name_of_par"
+                android:layout_alignLeft="@+id/name_of_par"
+                android:text="доц.каф. Студентовед"
+                android:textSize="14dp"
+                android:textColor="?android:attr/textColorSecondary"/>
 
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/auditoria"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_centerInParent="true"
+                android:text="400R"
+                android:textSize="16dp"
+                android:textColor="?android:attr/textColorPrimary"/>
+
+        </RelativeLayout>
+
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 
 </RelativeLayout>
