--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#FAFAFA</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="primaryText">#DE000000</color>
-    <color name="secondaryText">#8A000000</color>
+    <color name="colorPrimary_light">#FFFFFF</color>
+    <color name="colorPrimaryDark_light">#FFFFFF</color>
+    <color name="colorAccent_light">#66bb6a</color>
+    <color name="primaryText_light">#DE000000</color>
+    <color name="secondaryText_light">#8A000000</color>
 
-    <color name="white">#FFFFFF</color>
+    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#212121</color>
+    <color name="colorAccent">#8e24aa</color>
+    <color name="primaryText">#FFFFFF</color>
+    <color name="secondaryText">#B3FFFFFF</color>
+
+    <color name="statusbar">#FAFAFA</color>
 </resources>
