Подсветка текущей пары и разметка для геофака

--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
+
     >
 
 
@@ -11,7 +12,8 @@
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:layout_marginBottom="10dp"
-            android:id="@+id/bg_par">
+            android:id="@+id/bg_par"
+           >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
