--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,13 +2,13 @@
 <resources>
     <color name="colorPrimary_light">#FFFFFF</color>
     <color name="colorPrimaryDark_light">#FFFFFF</color>
-    <color name="colorAccent_light">#66bb6a</color>
+    <color name="colorAccent_light">#8367C4E6</color>
     <color name="primaryText_light">#DE000000</color>
     <color name="secondaryText_light">#8A000000</color>
 
     <color name="colorPrimary">#212121</color>
     <color name="colorPrimaryDark">#212121</color>
-    <color name="colorAccent">#8e24aa</color>
+    <color name="colorAccent">#948354DA</color>
     <color name="primaryText">#FFFFFF</color>
     <color name="secondaryText">#B3FFFFFF</color>
 
