--- a/app/src/main/res/layout/auth.xml
+++ b/app/src/main/res/layout/auth.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:elevation="2dp">
+    android:layout_height="match_parent">
 
-    <ImageButton
+    <com.google.android.gms.common.SignInButton
+
+        android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/theme"
-        android:layout_margin="15dp"
-        android:background="?android:attr/selectableItemBackground"/>
+        />
 
 </LinearLayout>
