--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -6,13 +6,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/day12"
+        android:id="@+id/first_day"
         android:background="@drawable/card"
         android:orientation="vertical"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="25dp"
         android:elevation="@dimen/cardview_default_elevation">
 
         <RelativeLayout
@@ -23,9 +22,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Суббота"
+                android:text="Понедельник"
                 android:textSize="16dp"
-                android:id="@+id/current_day"
+                android:id="@+id/daaaay1"
                 android:textColor="?android:attr/textColorPrimary"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="10dp"
@@ -35,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="DD.MM.YYYY"
-                android:id="@+id/date12"
+                android:id="@+id/date1"
                 android:textSize="16dp"
                 android:textColor="?android:attr/textColorPrimary"
                 android:layout_marginRight="10dp"
