--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,12 @@
     <color name="primaryText">#FFFFFF</color>
     <color name="secondaryText">#B3FFFFFF</color>
 
+    <color name="line_white">#e0e0e0</color>
+    <color name="line_dark">#353535</color>
+
+    <color name="ripple_material_dark1">#33ffffff</color>
+    <color name="ripple_material_light1">#1f000000</color>`
+
+
     <color name="statusbar">#FAFAFA</color>
 </resources>
