--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
 
-    <style name="Light" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Light" parent="Theme.MaterialComponents.Light.NoActionBar">
 
 
         <item name="android:windowNoTitle">true</item>
@@ -10,12 +10,17 @@
         <item name="colorPrimary">@color/colorPrimary_light</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark_light</item>
         <item name="colorAccent">@color/colorAccent_light</item>
+
+        <item name="colorControlHighlight">@color/ripple_material_light</item>
+
         <item name="android:textColorPrimary">@color/primaryText_light</item>
         <item name="android:textColorSecondary">@color/secondaryText_light</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
+
+        <item name="android:listDivider">@color/line_white</item>
     </style>
 
-    <style name="Light_statusbar" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Light_statusbar" parent="Theme.MaterialComponents.Light.NoActionBar">
 
 
         <item name="android:windowNoTitle">true</item>
@@ -24,12 +29,17 @@
         <item name="colorPrimary">@color/colorPrimary_light</item>
         <item name="colorPrimaryDark">@color/statusbar</item>
         <item name="colorAccent">@color/colorAccent_light</item>
+
+        <item name="colorControlHighlight">@color/ripple_material_light</item>
+
         <item name="android:textColorPrimary">@color/primaryText_light</item>
         <item name="android:textColorSecondary">@color/secondaryText_light</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
+
+        <item name="android:listDivider">@color/line_white</item>
     </style>
 
-    <style name="Dark" parent="ThemeOverlay.AppCompat.Dark">
+    <style name="Dark" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowContentOverlay">@null</item>
@@ -37,9 +47,14 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="colorControlHighlight">@color/ripple_material_dark</item>
+
         <item name="android:textColorPrimary">@color/primaryText</item>
         <item name="android:textColorSecondary">@color/secondaryText</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@color/colorPrimary</item>
+
+        <item name="android:listDivider">@color/line_dark</item>
     </style>
 
 </resources>
