--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
                 android:layout_centerHorizontal="true"
                 android:text="Расписание"
                 android:textColor="?android:attr/textColorPrimary"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:textAppearance="@style/Widget.MaterialComponents.Button"
                 android:id="@+id/timetable"
                 app:rippleColor="?android:attr/colorControlHighlight"
@@ -63,7 +63,7 @@
                 android:layout_centerHorizontal="true"
                 android:text="Карта"
                 android:textColor="?android:attr/textColorPrimary"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:textAppearance="@style/Widget.MaterialComponents.Button"
                 android:id="@+id/maps"
                 app:rippleColor="?android:attr/colorControlHighlight"
@@ -74,9 +74,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_centerHorizontal="true"
-                android:text="Выбор темы"
+                android:text="Настройки"
                 android:textColor="?android:attr/textColorPrimary"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:textAppearance="@style/Widget.MaterialComponents.Button"
                 android:id="@+id/setting_button"
                 app:rippleColor="?android:attr/colorControlHighlight"
