--- a/app/src/main/res/drawable/study_timetable_bg_on.xml
+++ b/app/src/main/res/drawable/study_timetable_bg_on.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="?attr/colorPrimary"/>
+    <solid
+        android:color="?attr/colorAccent"/>
     <corners android:radius="16dp"/>
+    <stroke
+        android:width="1dip"
+        android:color="?attr/colorAccent" />
+
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
