--- a/app/src/main/res/drawable/time_bg.xml
+++ b/app/src/main/res/drawable/time_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="?attr/colorPrimary"/>
-    <corners android:radius="16dp"/>
+    <solid android:color="?attr/colorAccent"/>
+    <corners android:radius="26dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
