--- a/app/src/main/res/layout/auth.xml
+++ b/app/src/main/res/layout/auth.xml
@@ -1,13 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary_light">
+
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/card_white"
+        android:padding="9dp"
+        android:src="@drawable/ic_book_144dp"
+        android:layout_marginTop="170dp"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/book_logo"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Расписание АГУ"
+        android:textColor="@color/primaryText_light"
+        android:textSize="40sp"
+        android:id="@+id/text_logo"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/book_logo"/>
 
     <com.google.android.gms.common.SignInButton
-
+        android:layout_marginTop="16dp"
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/text_logo"
         />
-
-</LinearLayout>
+</RelativeLayout>
