--- a/app/src/main/res/layout/fragment_group_num.xml
+++ b/app/src/main/res/layout/fragment_group_num.xml
@@ -14,7 +14,7 @@
         android:text="000"
         android:layout_marginTop="15dp"
         android:textColor="?android:attr/textColorPrimary"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:id="@+id/group1"
         android:background="@android:color/transparent"/>
 
@@ -28,7 +28,7 @@
         android:background="@android:color/transparent"
         android:text="000"
         android:textColor="?android:attr/textColorPrimary"
-        android:textSize="25dp" />
+        android:textSize="25sp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -37,7 +37,7 @@
         android:layout_weight="1"
         android:layout_marginTop="15dp"
         android:textColor="?android:attr/textColorPrimary"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:id="@+id/group3"
         android:background="@android:color/transparent"/>
 
