--- a/app/src/main/res/layout/group_list.xml
+++ b/app/src/main/res/layout/group_list.xml
@@ -61,7 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:text="Выбор темы"
+            android:text="Настройки"
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="25dp"
             android:textAppearance="@style/Widget.MaterialComponents.Button"
